# chlibc

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .lefthook.yml  .typos.toml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  archive.sh  clang-tidy-fix-arg  cmake-build  elf_release_audit.sh  loader_audit.sh  patch_gcc_specs.sh  pixi.toml  release.sh
.github/workflows/: ci-release.yml
.pixi/: config.toml
cmake/: toolchain-aarch64.cmake  toolchain-clang-aarch64.cmake  toolchain-clang-x86_64.cmake  toolchain-x86_64.cmake  top-include.cmake
cmake/toolchain/: _all.cmake  conda-build.cmake  gcc-riscv64.cmake  per-project-post.cmake
conda/: conda_build_config.yaml  recipe.yaml
src/: chlibc-v0.c  chlibc.c  common.h  dump-args.c  init.c  loader-aarch64.c  loader-powerpc64le.c  loader-riscv64.c  loader-x86_64.c  loader.c  loader.h  loader.ld.S  test-align.c
vm-test/: .gitignore  generate-initramfs.sh  prepare-kernel-glibc.sh  run.sh
